--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   flutter_bloc: ^9.1.1
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/configs/app_config.json
+    - assets/todos/todos.json
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
