Enhance Todo functionality with filtering and searching capabilities; update UI components for better user experience.

--- a/assets/configs/app_config.json
+++ b/assets/configs/app_config.json
@@ -21,9 +21,9 @@
       }
     },
     "components": {
-      "showAddButton": false,
-      "showSearchBar": true,
-      "showFilters": true,
+      "showAddButton": true,
+      "showSearchBar": false,
+      "showFilters": false,
       "customButtons": [
         {
           "id": "export",
